kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cannabis-clusterip
spec:
  type: ClusterIP
  ports:
    - name: backend
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: frontend
      port: 3000
      protocol: TCP
      targetPort: 3000
